--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign-Up Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="container">
+        <section class="right-section">
+            <p class="odin-logo">
+                <img src="odin-lined.png" alt="odin logo">
+                <p>ODIN</p>
+            </p>
+        </section>
+        <section class="left-section"></section>
+    </section>
 </body>
-</html>head
+
+</html>
