Add to right section antoher p element for pic credits

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 <img src="odin-lined.png" alt="odin logo">
                 <p>ODIN</p>
             </p>
+            <p class="credits-for-photo">
+                Photo by <a href="https://www.zedge.net/wallpaper/07d73bf2-b737-453f-9dbb-f5349679cb0a">ZEDGE.NET</a>
+            </p>
         </section>
         <section class="left-section"></section>
     </section>
