Add to right section header within it h3,2 p elem

--- a/index.html
+++ b/index.html
@@ -10,16 +10,26 @@
 
 <body>
     <section class="container">
-        <section class="right-section">
+        <section class="left-section">
             <p class="odin-logo">
                 <img src="odin-lined.png" alt="odin logo">
-                <p>ODIN</p>
+            <p>ODIN</p>
             </p>
             <p class="credits-for-photo">
                 Photo by <a href="https://www.zedge.net/wallpaper/07d73bf2-b737-453f-9dbb-f5349679cb0a">ZEDGE.NET</a>
             </p>
         </section>
-        <section class="left-section"></section>
+        <section class="right-section">
+            <form action="" method="get">
+                <header class="header">
+                    <h3 class="header-title">
+                        <p class="header-description">This is not a real online service.You know need something like this in your life to help you realize your deepest dreams.</p>
+                        <p class="get-started">Sign up now to get started</p>
+                        You know you want to.
+                    </h3>
+                </header>
+            </form>
+        </section>
     </section>
 </body>
 
