Add form in right section,within add header,add div for form inputs,within addd h3 with div

--- a/index.html
+++ b/index.html
@@ -23,11 +23,54 @@
             <form action="" method="get">
                 <header class="header">
                     <h3 class="header-title">
-                        <p class="header-description">This is not a real online service.You know need something like this in your life to help you realize your deepest dreams.</p>
+                        <p class="header-description">This is not a real online service.You know need something like
+                            this in your life to help you realize your deepest dreams.</p>
                         <p class="get-started">Sign up now to get started</p>
                         You know you want to.
                     </h3>
                 </header>
+                <div class="form-inputs">
+
+                    <div class="inputs-title">
+                        <h3 class="form-title">Lets's do this!</h3>
+                    </div>
+
+
+
+                    <p class="form-input">
+                        <label for="name">FIRST NAME</label>
+                        <input type="text" id="name" name="name" required>
+                    </p>
+
+                    <p class="form-input">
+                        <label for="surname">LAST NAME</label>
+                        <input type="text" id="surname" name="surname" required>
+                    </p>
+                    <p class="form-input">
+                        <label for="email">E-MAIL</label>
+                        <input type="email" id="email" name="email" required>
+                    </p>
+                    <p class="form-input">
+                        <label for="phone">PHONE NUMBER</label>
+                        <input type="tel" id="phone" name="phone" required>
+                    </p>
+                    <p class="form-input">
+                        <label for="password">PASSWORD</label>
+                        <input type="password" id="password" name="password" required>
+                        <span>*Passwords do not match</span>
+                    </p>
+                    <p class="form-input">
+                        <label for="password">CONFIRM PASSWORD</label>
+                        <input type="password" id="password" name="password" required>
+
+                    </p>
+
+
+
+                    <button type="submit" class="submit-button">Create Account</button>
+
+                    <p class="sign-in"> Already have an Account?<a href="#">Log in</a></p>
+
             </form>
         </section>
     </section>
